# WebBrowser

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
include/: dataitem.h  dataitemmanager.h  historyview.h  webbrowser.h  webview.h
src/: dataitemmanager.cpp  historyview.cpp  webbrowser.cpp  webview.cpp
